.jjconflict-side-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__const_imported_ignoring_label.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other\npub const main = other.Two(1)\n"
---
let
  other' = builtins.import ./../other.nix;
  
  main = other'.Two 1;
in
{ inherit main; }
