.jjconflict-side-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__unnamed_fields.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "\ntype Ip{\n    Ip(String)\n}\n\nconst local = Ip(\"0.0.0.0\")\n\nfn build(x) {\n    x(\"1.2.3.4\")\n}\n\nfn go() {\n    build(Ip)\n    Ip(\"5.6.7.8\")\n}\n\nfn destructure(x) {\n  let Ip(raw) = x\n  raw\n}\n"
---
let
  Ip = x0: { __gleamTag = "Ip"; _0 = x0; };
  
  build = x: x "1.2.3.4";
  
  go = { }: let _' = build Ip; in builtins.seq _' (Ip "5.6.7.8");
  
  destructure = x: let raw = x._0; in raw;
  
  local = Ip "0.0.0.0";
in
{ }
